--- a/flipdot/src/BUILD.bazel
+++ b/flipdot/src/BUILD.bazel
@@ -1,5 +1,14 @@
 load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary", "ros2_py_test")
+load("@rules_python//python:defs.bzl", "py_library")
 
+py_library(
+    name = "flipdot_utils",
+    srcs = ["utils.py"],
+    deps = [
+        "//flipdot/msgs:py_flipdotframe_msg",
+    ],
+    visibility = ["//visibility:public"],
+)
 ros2_py_binary(
     name = "test_publisher",
     srcs = ["test_publisher.py"],
@@ -7,6 +16,7 @@ ros2_py_binary(
     deps = [
         "//flipdot/msgs:py_flipdotframe_msg",
         "@ros2_rclpy//:rclpy",
+        ":flipdot_utils"
     ],
     visibility = ["//visibility:public"],
 )
