--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,6 @@
 
 	"containerEnv": {
 		"SSH_AUTH_SOCK": "/ssh-agent",
-        "PYTHONPATH": "/workspaces/Template_repo:/opt/ros/jazzy/lib/python3.12/site-packages:/venv/lib/python3.12/site-packages"
+        "PYTHONPATH": "/workspaces/flipdot-rpi:/opt/ros/jazzy/lib/python3.12/site-packages:/venv/lib/python3.12/site-packages"
     }
 }
