--- a/flipdot/msgs/BUILD.bazel
+++ b/flipdot/msgs/BUILD.bazel
@@ -4,6 +4,9 @@ ros2_interface_library(
     name = "flipdotframe_msg",
     srcs = ["FlipDotFrame.msg"],
     visibility = ["//visibility:public"],
+    deps = [
+        "@ros2_common_interfaces//:std_msgs",
+    ],
 )
 
 cpp_ros2_interface_library(
