--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -69,7 +69,12 @@ bazel_dep(name = "bazel_clang_tidy")
 
 ## rules ros2
 bazel_dep(name = "fmt", version = "12.0.0")  # com_github_mvukov_rules_ros2 breaks without this
-bazel_dep(name = "com_github_mvukov_rules_ros2", version = "0.0.0-20250612-f0d04fe")
+bazel_dep(name = "com_github_mvukov_rules_ros2")
+git_override(
+    module_name = "com_github_mvukov_rules_ros2",
+    remote = "https://github.com/mvukov/rules_ros2.git",
+    commit = "7131e46f29aad4c2903e015bd44a531783e01939",
+)
 
 rules_ros2_non_module_deps = use_extension("@com_github_mvukov_rules_ros2//ros2:extensions.bzl", "non_module_deps")
 use_repo(
