--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,7 +6,7 @@ module(
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "rules_python", version = "1.6.3")
 bazel_dep(name = "rules_shell", version = "0.6.1")
-bazel_dep(name = "rules_cc", version = "0.2.11")
+bazel_dep(name = "rules_cc", version = "0.2.15")
 bazel_dep(name = "eigen", version = "5.0.0")
 
 bazel_dep(
@@ -68,7 +68,7 @@ git_override(
 bazel_dep(name = "bazel_clang_tidy")
 
 ## rules ros2
-bazel_dep(name = "fmt", version = "12.0.0")  # com_github_mvukov_rules_ros2 breaks without this
+# bazel_dep(name = "fmt", version = "12.0.0")  # com_github_mvukov_rules_ros2 breaks without this
 bazel_dep(name = "com_github_mvukov_rules_ros2")
 git_override(
     module_name = "com_github_mvukov_rules_ros2",
