--- a/flipdot/src/foxglove/BUILD.bazel
+++ b/flipdot/src/foxglove/BUILD.bazel
@@ -3,12 +3,15 @@ load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")
 load("@rules_python//python:defs.bzl", "py_binary")
 load("@py_deps//:requirements.bzl", "requirement")
 
-py_binary(
+ros2_py_binary(
     name = "test_foxglove",
     srcs = ["test_foxglove.py"],
+    main = "test_foxglove.py",
     deps = [
         requirement("foxglove-sdk"),
-        requirement("numpy")
+        requirement("numpy"),
+        "@ros2_rclpy//:rclpy",
+        "@ros2_common_interfaces//:py_sensor_msgs",
     ],
     visibility = ["//visibility:public"],
 )
@@ -27,18 +30,18 @@ ros2_py_binary(
     ],
 )
 
-ros2_launch(
-    name = "bridge_visualizer_launch",
-    launch_file = "bridge_visualizer_launch.py",
-    nodes = [
-        # ":visualizer",
-        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
-    ],
-    idl_deps = [
-        "//flipdot/msgs:flipdotframe_msg",
-        "@ros2_common_interfaces//:sensor_msgs",
-    ],
-    deps = [
-        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:utils",
-    ],
-)
+# ros2_launch(
+#     name = "bridge_visualizer_launch",
+#     launch_file = "bridge_visualizer_launch.py",
+#     nodes = [
+#         # ":visualizer",
+#         "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
+#     ],
+#     idl_deps = [
+#         "//flipdot/msgs:flipdotframe_msg",
+#         "@ros2_common_interfaces//:sensor_msgs",
+#     ],
+#     deps = [
+#         "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:utils",
+#     ],
+# )
