--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.ruff]
-select = ["E", "F", "I"] 
-fixable = ["ALL"]
+lint.select = ["E", "F", "I"] 
+lint.fixable = ["ALL"]
 line-length = 100
 
 [tool.ruff.format]
