--- a/flipdot/src/BUILD.bazel
+++ b/flipdot/src/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
+load("@py_deps//:requirements.bzl", "requirement")
 load("@rules_python//python:defs.bzl", "py_library")
 
 py_library(
@@ -29,5 +30,17 @@ ros2_py_binary(
     deps = [
         ":flipdot_utils",
         "@ros2_rclpy//:rclpy",
+    ],
+)
+
+ros2_py_binary(
+    name = "controller",
+    srcs = ["controller.py"],
+    main = "controller.py",
+    visibility = ["//visibility:public"],
+    deps = [
+        ":flipdot_utils",
+        "@ros2_rclpy//:rclpy",
+        requirement("flippydot"),
     ],
 )
