--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,7 @@ bazel_dep(name = "rules_python", version = "1.6.3")
 bazel_dep(name = "rules_shell", version = "0.6.1")
 bazel_dep(name = "rules_cc", version = "0.2.15")
 bazel_dep(name = "eigen", version = "5.0.0")
+bazel_dep(name = "rules_pkg", version = "1.2.0")
 
 bazel_dep(
     name = "bazel_clang_format",
