update to use ubuntu 24.04 for some deps to build

--- a/flipdot/src/BUILD.bazel
+++ b/flipdot/src/BUILD.bazel
@@ -55,5 +55,6 @@ pkg_tar(
     ],
     include_runfiles = True, 
     strip_prefix = ".",
-    package_dir = "/opt/flipdot",
+    # remove for flexibility
+    # package_dir = "/opt/flipdot",
 )
