--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,12 @@ permissions:
 jobs:
   # Build DevContainer and warm cache
   setup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm64
     outputs:
       image-name: template_repo/devcontainer
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Build DevContainer image
         uses: devcontainers/ci@v0.3
@@ -30,7 +27,7 @@ jobs:
   
   # Run linters inside cached DevContainer
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm64
     needs: setup
     steps:
       - name: Checkout code
@@ -51,7 +48,7 @@ jobs:
 
   # Build test inside cached DevContainer
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm64
     needs: setup
     steps:
       - name: Checkout code
