add rules for getting stuff to run properly with the correct paths and LD_PRELOAD env vars

--- a/flipdot/src/BUILD.bazel
+++ b/flipdot/src/BUILD.bazel
@@ -2,6 +2,7 @@ load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
 load("@py_deps//:requirements.bzl", "requirement")
 load("@rules_python//python:defs.bzl", "py_library")
 load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
+load(":macros.bzl", "ros2_launcher")
 
 py_library(
     name = "flipdot_utils",
@@ -46,12 +47,23 @@ ros2_py_binary(
     ],
 )
 
+ros2_launcher(name = "run_controller", target = "controller")
+ros2_launcher(name = "run_publisher", target = "test_publisher")
+ros2_launcher(name = "run_subscriber", target = "test_subscriber")
+
 pkg_tar(
     name = "flipdot_package",
     srcs = [
         ":test_publisher",
         ":test_subscriber",
         ":controller",
+        ":run_controller",
+        ":run_publisher",
+        ":run_subscriber",
+        "//flipdot/src/foxglove:visualizer",
+        "//flipdot/src/foxglove:foxglove_bridge",
+        "//flipdot/src/foxglove:run_visualizer",
+        "//flipdot/src/foxglove:run_bridge"
     ],
     include_runfiles = True,
     # strip_prefix = "flipdot/src", 
