change name of devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Template_repo",
+	"name": "flipdot-rpi",
 	"build": {
 		"context": "..",
 		"dockerfile": "./Dockerfile",
@@ -22,7 +22,6 @@
 	},
 
 	"containerEnv": {
-		"SSH_AUTH_SOCK": "/ssh-agent"
-        // "PYTHONPATH": "/workspaces/flipdot-rpi:/opt/ros/jazzy/lib/python3.12/site-packages:/venv/lib/python3.12/site-packages"
+		"SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK}"
     }
 }
