--- a/flipdot/src/BUILD.bazel
+++ b/flipdot/src/BUILD.bazel
@@ -56,22 +56,39 @@ pkg_tar(
     srcs = [
         ":test_publisher",
         ":test_subscriber",
+        ":run_publisher",
+        ":run_subscriber"
+    ],
+    include_runfiles = True,
+)
+
+pkg_tar(
+    name = "flipdot_controller_package",
+    srcs = [
         ":controller",
         ":run_controller",
-        ":run_publisher",
-        ":run_subscriber",
-        "//flipdot/src/foxglove:visualizer",
-        "//flipdot/src/foxglove:foxglove_bridge",
-        "//flipdot/src/foxglove:run_visualizer",
-        "//flipdot/src/foxglove:run_bridge",
+    ],
+    include_runfiles = True,
+)
+
+pkg_tar(
+    name = "ros2_package",
+    srcs = [
         "//tools/ros2:run_bag",
         "//tools/ros2:run_topic",
         "//tools/ros2:bag",
         "//tools/ros2:topic",
     ],
     include_runfiles = True,
-    # strip_prefix = "flipdot/src", 
-    # package_dir = "flipdot_app",
-    # remove for flexibility
-    # package_dir = "/opt/flipdot",
+)
+
+pkg_tar(
+    name = "foxglove_bridge_package",
+    srcs = [
+        "//flipdot/src/foxglove:visualizer",
+        "//flipdot/src/foxglove:foxglove_bridge",
+        "//flipdot/src/foxglove:run_visualizer",
+        "//flipdot/src/foxglove:run_bridge",
+    ],
+    include_runfiles = True,
 )
