Switch to arm container for natively building for rpi (#4)
* switch to arm linux

* update to use ubuntu 24.04 for some deps to build

* add qemu so we can build for arm

* switch to use arm64 runner

* works if u manually set LD_PRELOAD

* add rules for getting stuff to run properly with the correct paths and LD_PRELOAD env vars

* change name of devcontainer

* package up bag and topic commands as well onto the pi

* fix ci

* make smaller packages so we can move smaller chunks to the rpi

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04
 
 RUN apt-get update && \
     apt-get install -y \
@@ -11,7 +11,7 @@ RUN apt-get update && \
     python3-venv && \
     apt-get clean
 
-RUN curl -L https://github.com/bazelbuild/bazelisk/releases/download/v1.27.0/bazelisk-linux-amd64 -o bazelisk && \
+RUN curl -L https://github.com/bazelbuild/bazelisk/releases/download/v1.27.0/bazelisk-linux-arm64 -o bazelisk && \
     mv bazelisk /usr/local/bin/bazelisk && \
     chmod +x /usr/local/bin/bazelisk && \
     ln -s /usr/local/bin/bazelisk /usr/local/bin/bazel
