--- a/flipdot/src/states/BUILD.bazel
+++ b/flipdot/src/states/BUILD.bazel
@@ -1,18 +1,17 @@
-load("@rules_python//python:defs.bzl", "py_library")
 load("@py_deps//:requirements.bzl", "requirement")
-
+load("@rules_python//python:defs.bzl", "py_library")
 
 py_library(
     name = "states",
     srcs = [
-        "clock_state.py",
         "base_state.py",
+        "clock_state.py",
     ],
-    data = ["//flipdot/fonts:fonts"],
+    data = ["//flipdot/fonts"],
+    visibility = ["//visibility:public"],
     deps = [
-        "@rules_python//python/runfiles:runfiles",
+        "@rules_python//python/runfiles",
         requirement("pillow"),
         requirement("numpy"),
     ],
-    visibility = ["//visibility:public"],
 )
