see if runner has enough memory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,5 @@ jobs:
           runCmd: |
             set -euo pipefail
             echo "🛠️ Building project inside DevContainer..."
-            bazel build //...
+            bazel build //flipdot/...
             echo "✅ Build succeeded!"
